--- a/app/plugin/resource/element/view/upsert.html
+++ b/app/plugin/resource/element/view/upsert.html
@@ -110,7 +110,7 @@
              */
             _clearData() {
                 this.$.formResource.reset();
-                this.$.fileUpload.clearName();
+                this.$.fileUpload.reset();
             }
 
             /**
