--- a/app/plugin/video-panel/element/view/upsert.html
+++ b/app/plugin/video-panel/element/view/upsert.html
@@ -13,7 +13,7 @@
 <link rel="import" href="../../../../css/global-layout.html">
 <link rel="import" href="../../../../css/global-styles.html">
 
-<dom-module id="sideline-view-upsert">
+<dom-module id="video-panel-view-upsert">
     <template>
         <style>
             #cardSubSideline {
@@ -250,10 +250,10 @@
     </template>
 
     <script>
-        class ElementSidelineViewUpsert extends Polymer.Element {
+        class ElementVideoPanelViewUpsert extends Polymer.Element {
 
             static get is() {
-                return 'sideline-view-upsert';
+                return 'video-panel-view-upsert';
             }
 
             static get properties() {
@@ -521,7 +521,7 @@
             }
         }
 
-        window.customElements.define(ElementSidelineViewUpsert.is, ElementSidelineViewUpsert);
+        window.customElements.define(ElementVideoPanelViewUpsert.is, ElementVideoPanelViewUpsert);
 
     </script>
 </dom-module>
