--- a/app/plugin/video-panel/element/view/upsert.html
+++ b/app/plugin/video-panel/element/view/upsert.html
@@ -284,7 +284,7 @@
                 super.ready();
 
                 serviceManager.get('StoragePluginManager')
-                    .get(SidelineConfig.NAME_SERVICE)
+                    .get(VideoPanelConfig.NAME_SERVICE)
                     .eventManager.on(Storage.STORAGE_POST_SAVE, this._clearSideline.bind(this)
                 );
 
@@ -307,7 +307,7 @@
 
                 let method = this.sideline.id ? 'update' : 'save';
                 serviceManager.get('StoragePluginManager')
-                    .get(SidelineConfig.NAME_SERVICE)[method](this.sideline)
+                    .get(VideoPanelConfig.NAME_SERVICE)[method](this.sideline)
                     .then((data) => {
                         serviceManager.get('PaperToastNotification').notify(method.charAt(0).toUpperCase() + method.slice(1) + ' sideline');
                     })
