--- a/app/element/layout/application-layout.html
+++ b/app/element/layout/application-layout.html
@@ -24,6 +24,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="../../element/iconset/iconset.html">
 <link rel="import" href="../icon/internet.html">
 <link rel="import" href="../icon/backup.html">
+<link rel="import" href="../icon/atop.html">
 
 <link rel="import" href="view/view-404.html">
 
@@ -94,9 +95,10 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
                 <app-toolbar>
                     <paper-icon-button icon="app:menu" on-click="toggle"></paper-icon-button>
                     <div main-title>{{nameApplication}}</div>
+                    <element-atop></element-atop>
                     <element-backup-icon></element-backup-icon>
                     <div class="separator"></div>
-                    <element-internet internet="vai toni"></element-internet>
+                    <element-internet></element-internet>
                 </app-toolbar>
             </app-header>
             <div>
